fix(Home): update Dashboard and Cards
update the card layouts, background color and truncation for lists inside of the cards

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,9 +3,13 @@
 $icon-path: '../../assets/icon/';
 $images-path: '../../assets/images/';
 
+.cards-pf {
+  background-color: $color-pf-black-250;
+}
+
 .home-wrapper {
-  background-color: $color-pf-black-150;
-  height: 100%;
+  background-color: $color-pf-black-250;
+  min-height: 100%;
   .pf-icon-home {
     font-size: $pf-icon-4x;
     padding: 5rem 0 3rem;
@@ -14,13 +18,18 @@ $images-path: '../../assets/images/';
 
 .home-space-list-result {
   .list-view-pf-view {
-    margin-top: 10px;
+    margin-top: 0;
   }
   .list-group {
     margin-bottom: 0px;
   }
 }
-
+.list-group-item-text {
+  width: 540px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .home-banner {
   background-color: $color-pf-black-900;
   background-image: url("#{$images-path}Header_background.png");
