--- a/src/app/home/work-item-widget/work-item-widget.component.scss
+++ b/src/app/home/work-item-widget/work-item-widget.component.scss
@@ -1,10 +1,34 @@
 @import '../../../assets/stylesheets/base';
 
+.create-work-item-widget {
+  .card-f8-body {
+    overflow-y: hidden;
+  }
+}
+.card-pf-title {
+  display: inline-flex;
+}
+.combobox {
+  width: 330px;
+  position: absolute;
+  top: 15px;
+  right: 25px;
+}
+.work-item-title {
+  position: absolute;
+  left: 115px;
+  width: 425px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .blank-slate-workitem-card {
   position: relative;
   text-align: center;
   top: 50%;
   transform: translateY(-50%);
+  padding-left: 30px;
+  padding-right: 30px;
   p {
     margin-bottom: 20px;
     margin-top: 20px;
@@ -16,12 +40,13 @@
     }
   }
 }
-
+.list-view-pf-view {
+  margin-top: 0;
+}
 .create-work-item-icon {
-  padding-top: 5px;
+  padding-top: 2px;
   padding-right: 10px;
 }
-
 .create-work-item-link {
   padding-left: 10px;
 }
